@@ -1,3 +1,8 @@
+2003-04-21  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
+
+	* expr.c (store_constructor): Set RTX_UNCHANGING_P if readonly_field_p
+	before clearing.
+
 2003-04-21  Mark Mitchell  <mark@codesourcery.com>
 
 	* config/i386/winnt.c (i386_pe_mark_dllimport): Make the new RTL
